# deep-ga

./: .gitignore  README.md  comp_to_uncomp.py  compressed.py  config.json  evaluate.py  main.py  preprocess.py  test.py  train.py  uncompressed.py  utils.py
src/: README.md  conv.py  evaluate.py  preprocess.py  pyproject.toml  uncompressed.py
