[tool.poetry]
name = "deepga"
version = "0.1.0"
description = ""
authors = ["Francesco Ballerini <francesco.ballerini3@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = {extras = ["atari"], version = "^0.25.0"}
AutoROM = {extras = ["accept-rom-license"], version = "^0.4.2"}
matplotlib = "^3.5.2"
torch = "^1.12.0"
scikit-image = "^0.19.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
